fixed hover on nav and fixed element overlap due to small screen size

--- a/css/css-animation-css.css
+++ b/css/css-animation-css.css
@@ -79,15 +79,26 @@ nav ul {
 
 nav li {
   display: inline;
-  margin: 0 3px;
+  margin: 3px 3px; }
+
+nav li a {
   padding: 4px 4px;
   text-decoration: none; }
 
-nav li:hover {
+nav li a:hover {
   background-color: #555;
-  color: white;
-  border-radius: 5px; }
+  border-radius: 5px;
+  color: white; }
 
+@media screen and (max-width: 700px) {
+  header div.animate {
+    display: none; }
+
+  nav {
+    width: 200px; }
+
+  nav li {
+    display: block; } }
 main {
   width: 100%;
   display: inline-block;
