--- a/scss/css-animation-scss.scss
+++ b/scss/css-animation-scss.scss
@@ -71,22 +71,38 @@ nav {
 }
 
 nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 20px;
-    background-color: #f1f1f1;
+	list-style-type: none;
+	margin: 0;
+	padding: 20px;
+	background-color: #f1f1f1;
 }
 nav li {
-    display: inline;
-    margin: 0 3px;
-    padding: 4px 4px;
-    text-decoration: none;
+	display: inline;
+	margin: 3px 3px;
+	
 }
 
-nav li:hover {
-    background-color: #555;
-    color: white;
-    border-radius: 5px;
+nav li a{
+	padding: 4px 4px;
+	text-decoration: none;
+}
+
+nav li a:hover{
+	background-color: #555;
+	border-radius: 5px;
+	color: white;
+}
+
+@media screen and (max-width: 700px){
+	header div.animate{
+		display: none;
+	}
+	nav {
+		width: 200px
+	}
+	nav li {
+		display: block;	
+	}
 }
 
 main{
